<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ForgotPasswordActivity"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline01"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline06"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline07"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        android:src="@drawable/left_arrow"
        app:layout_constraintStart_toStartOf="@id/guideline01"
        app:layout_constraintTop_toTopOf="@id/guideline02" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/forgot_password_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/guideline01"
        app:layout_constraintTop_toBottomOf="@id/guideline03" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/forgot_password_subtitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline01"
        app:layout_constraintTop_toBottomOf="@id/guideline04" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/log_in_sign_up_edit_text_background"
        android:inputType="textEmailAddress"
        android:labelFor="@id/tvEmail"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@id/guideline06"
        app:layout_constraintStart_toStartOf="@id/guideline01"
        app:layout_constraintTop_toBottomOf="@id/guideline05" />

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/log_in_sign_up_button_background"
        android:letterSpacing="0.1"
        android:text="@string/forgot_password_reset_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline07"
        app:layout_constraintEnd_toEndOf="@id/guideline06"
        app:layout_constraintStart_toStartOf="@id/guideline01"
        app:layout_constraintTop_toTopOf="@id/guideline07" />

    <FrameLayout
        android:id="@+id/successFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btnResetPassword"
        app:layout_constraintEnd_toEndOf="@id/guideline06"
        app:layout_constraintStart_toStartOf="@id/guideline01"
        app:layout_constraintTop_toTopOf="@id/guideline03" />

</androidx.constraintlayout.widget.ConstraintLayout>