<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".Fragment.Main.UserFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVer01"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVer02"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHor01"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHor02"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHor03"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHor04"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHor05"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <LinearLayout
        android:id="@+id/llProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="@id/glHor01"
        app:layout_constraintEnd_toEndOf="@id/glVer02"
        app:layout_constraintStart_toStartOf="@id/glVer01"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.8">

            <ImageView
                android:visibility="invisible"
                android:id="@+id/ivProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:contentDescription="@string/app_name"
                android:src="@drawable/user_icon" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7.7"
            android:orientation="vertical"
            android:weightSum="3">

            <TextView
                android:visibility="invisible"
                android:id="@+id/tvUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:letterSpacing="0.05"
                android:text="Username"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_light"
                android:gravity="bottom"
                android:letterSpacing="0.05"
                android:text="View and edit your profile"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:contentDescription="@string/app_name"
            android:scaleType="fitEnd"
            android:src="@drawable/right_arrow"
            app:tint="@color/blue" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="10dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/glHor01"
        app:layout_constraintEnd_toEndOf="@id/glVer02"
        app:layout_constraintStart_toStartOf="@id/glVer01" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/box_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@id/glHor02"
        app:layout_constraintEnd_toEndOf="@id/glVer02"
        app:layout_constraintStart_toStartOf="@id/glVer01"
        app:layout_constraintTop_toBottomOf="@id/glHor01">

        <TextView
            android:id="@+id/tvQuotation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/roboto_italic"
            android:text="@string/quote"
            android:textAlignment="center"
            android:textColor="#9F000000" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_italic"
            android:text="@string/author"
            android:textColor="#AE000000"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="@id/glVer02"
        app:layout_constraintStart_toStartOf="@id/glVer01"
        app:layout_constraintTop_toBottomOf="@id/glHor03">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="0.95"
                android:orientation="vertical"
                android:weightSum="3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:letterSpacing="0.05"
                    android:text="Notification"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="bottom"
                    android:letterSpacing="0.05"
                    android:text="Here is what going on to day"
                    android:textSize="12sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.05"
                android:contentDescription="@string/app_name"
                android:scaleType="fitEnd"
                android:src="@drawable/right_arrow"
                app:tint="@color/blue" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="@id/glVer02"
        app:layout_constraintStart_toStartOf="@id/glVer01"
        app:layout_constraintTop_toBottomOf="@id/glHor04">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="0.95"
                android:orientation="vertical"
                android:weightSum="3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:letterSpacing="0.05"
                    android:text="Post a project"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="bottom"
                    android:letterSpacing="0.05"
                    android:text="It's free to post a project!!"
                    android:textSize="12sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.05"
                android:contentDescription="@string/app_name"
                android:scaleType="fitEnd"
                android:src="@drawable/right_arrow"
                app:tint="@color/blue" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvLogOut"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:text="Log out"
        android:textColor="#FF0000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glVer02"
        app:layout_constraintStart_toStartOf="@id/glVer01"
        app:layout_constraintTop_toTopOf="@id/glHor05" />

</androidx.constraintlayout.widget.ConstraintLayout>